<resources>
    <string name="app_name">Dermatology App</string>
    <string name="desc_app_logo">app logo</string>
    <string name="dermatology_center">Dermatology Center</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="description_launch">Introducing our Dermatology Clinic app. Schedule appointments, access exam results, and receive skincare tips—all quickly and easily.</string>
    <string name="back_icon">back icon</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_desc">Please log in to access your account. If you don\'t have an account yet, click Sign Up to get started.</string>
    <string name="email">Email</string>
    <string name="example_example_com">example@example.com</string>
    <string name="password">Password</string>
    <string name="pass_login">*************</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="invalid_email_mobile_number_or_password">Invalid email or password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="show_hidden_password">show/hidden password</string>
    <string name="new_account">New Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="xx_xxxxx_xxxx">(XX) XXXXX-XXXX</string>
    <string name="by_continuing_you_agree_to">By continuing, you agree to</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="full_name">Full name</string>
    <string name="john_doe">John Doe</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="google_sign_up">Google sign up</string>
    <string name="web_client_id">3415260252-l9m5mqstl7qbul635ng5aruok6poa24f.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="icon">icon</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="profile_icon">profile icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="home_icon">home icon</string>
    <string name="user_picture">user picture</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_description">are you sure you want to log out?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="an_error_occurred_while_registering_please_try_again_later">An error occurred while registering. Please try again later.</string>
    <string name="new_account_description">Some information is missing to complete your profile. Please fill in the following fields.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_icon">edit icon</string>
    <string name="button_try_again">button try again</string>
    <string name="button_save">button save</string>
    <string name="button_gallery">button gallery</string>
    <string name="capture_button">capture button</string>
    <string name="close_button">close button</string>
    <string name="switch_camera_button">switch camera button</string>
    <string name="password_manager">Password Manager</string>
    <string name="delete_account">Delete Account</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="are_you_sure_you_want_to_delete_account">are you sure you want to delete account?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="last_update">Last update: 24/11/2024</string>
    <string name="policy_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pellentesque congue lorem, vel tincidunt tortor placerat a. Proin ac diam quam. Aenean in sagittis magna, ut feugiat diam. Fusce a scelerisque neque, sed accumsan metus.</string>
    <string name="policy_2">Nunc auctor tortor in dolor luctus, quis euismod urna tincidunt. Aenean arcu metus, bibendum at rhoncus at, volutpat ut lacus. Morbi pellentesque malesuada eros semper ultrices. Vestibulum lobortis enim vel neque auctor, a ultrices ex placerat. Mauris ut lacinia justo, sed suscipit tortor. Nam egestas nulla posuere neque tincidunt porta.</string>
    <string name="topic_1">Ut lacinia justo sit amet lorem sodales accumsan. Proin malesuada eleifend fermentum. Donec condimentum, nunc at rhoncus faucibus, ex nisi laoreet ipsum, eu pharetra eros est vitae orci. Morbi quis rhoncus mi. Nullam lacinia ornare accumsan. Duis laoreet, ex eget rutrum pharetra, lectus nisl posuere risus, vel facilisis nisi tellus ac turpis.</string>
    <string name="topic_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pellentesque congue lorem, vel tincidunt tortor placerat a. Proin ac diam quam. Aenean in sagittis magna, ut feugiat diam.</string>
    <string name="topic_4">Nunc auctor tortor in dolor luctus, quis euismod urna tincidunt. Aenean arcu metus, bibendum at rhoncus at, volutpat ut lacus. Morbi pellentesque malesuada eros semper ultrices. Vestibulum lobortis enim vel neque auctor, a ultrices ex placerat. Mauris ut lacinia justo, sed suscipit tortor. Nam egestas nulla posuere neque.</string>
    <string name="no_data">No data</string>
    <string name="sort_by">Sort By</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="male_icon">male icon</string>
    <string name="female_icon">female icon</string>
    <string name="no_data_icon">no data icon</string>
    <string name="error_icon">error icon</string>
    <string name="texto_teste">The impact of hormonal imbalances on skin conditions, specializing in acne, hirsutism, and other skin disorders.</string>
    <string name="available_time">Available time</string>
    <string name="patient_details">Patient Details</string>
    <string name="enter_your_problem_here">enter your Problem here...</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="arrow_back">arrow_back</string>
    <string name="arrow_next">arrow_next</string>
</resources>