<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/button_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_profile"
            android:contentDescription="@string/icon"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:fontFamily="@font/league_spartan_medium"
            android:textSize="24sp"
            android:layout_marginStart="26dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/icon_arrow"
            android:contentDescription="@string/back_icon"
            android:layout_marginStart="-8dp"
            android:rotation="180"
            android:visibility="visible"/>
    </LinearLayout>
</merge>